# dataretrieval-python

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  AGENTS.md  CONTRIBUTING.md  Disclaimer.md  LICENSE.md  NEWS.md  NOTES.md  PR217.md  README.md  code.json  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  wqp_neighbors.ipynb
.github/workflows/: python-package.yml  python-publish.yml  sphinx-docs.yml
.gitlab/issue_templates/: reviewer_checklist.md
_modules/: index.html
_modules/dataretrieval/: exceptions.html  nadp.html  ngwmn.html  nldi.html  nwis.html  samples.html  streamstats.html  utils.html  waterdata.html  wateruse.html  waterwatch.html  wqp.html
_sources/: index.rst.txt
_sources/examples/: USGS_WaterData_DailyValues_Examples.nblink.txt  USGS_WaterData_GroundwaterLevels_Examples.nblink.txt  USGS_WaterData_Introduction_Examples.nblink.txt  USGS_WaterData_ParameterCodes_Examples.nblink.txt  USGS_WaterData_Ratings_Examples.nblink.txt  USGS_WaterData_Samples_Examples.nblink.txt  USGS_WaterData_SiteInfo_Examples.nblink.txt  USGS_WaterData_SiteInventory_Examples.nblink.txt  USGS_WaterData_Statistics_Examples.nblink.txt  USGS_dataretrieval_DailyValues_Examples.nblink.txt  USGS_dataretrieval_GroundwaterLevels_Examples.nblink.txt  USGS_dataretrieval_Measurements_Examples.nblink.txt  USGS_dataretrieval_WaterSamples_Examples.nblink.txt  WaterData_demo.nblink.txt  index.rst.txt  nwisdemo01.nblink.txt  readme_examples.rst.txt  siteinfo_examples.rst.txt
_sources/meta/: contributing.rst.txt  installing.rst.txt  license.rst.txt
_sources/reference/: exceptions.rst.txt  index.rst.txt  nadp.rst.txt  ngwmn.rst.txt  nwis.rst.txt  samples.rst.txt  utils.rst.txt  waterdata.rst.txt
_sources/userguide/: dataportals.rst.txt
_static/: documentation_options.js
dataretrieval/: __init__.py  duckdb_connector.py  exceptions.py  flood_stage.py  nadp.py  ngwmn.py  nldi.py  nwis.py  rdb.py  samples.py  streamstats.py  utils.py  waterdata.py  waterdata_helpers.py  wateruse.py  waterwatch.py  wqp.py
dataretrieval.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dataretrieval/codes/: __init__.py  states.py  timezones.py
dataretrieval/duckdb_connectors/: __init__.py  _base.py  waterdata.py  wqp.py
dataretrieval/ogc/: __init__.py  _constants.py  _context.py  _http.py  _requests.py  _responses.py  _validate.py  chunking.py  dates.py  engine.py  errors.py  filters.py  interruptions.py  planning.py  progress.py  retry.py  shaping.py
dataretrieval/waterdata/: __init__.py  _progress.py  api.py  chunking.py  enums.py  filters.py  nearest.py  ngwmn.py  ratings.py  stats.py  types.py  utils.py  xarray.py
demos/: NWIS_demo_1.ipynb  R Python Vignette equivalents.ipynb  R Vignette for Python.ipynb  USGS_NGWMN_Examples.ipynb  USGS_WaterData_ContinuousData_Examples.ipynb  USGS_WaterData_DailyStatistics_Examples.ipynb  USGS_WaterData_DiscreteSamples_Examples.ipynb  USGS_WaterData_Introduction_Examples.ipynb  USGS_WaterData_ReferenceLists_Examples.ipynb  USGS_WaterUse_Examples.ipynb  WaterData_demo.ipynb  duckdb_waterdata_demo.ipynb  flow_neighbors.ipynb  naqwa_data_pull.ipynb  peak_streamflow_trends.ipynb  waterdata_xarray_demo.ipynb  wqp_neighbors.ipynb
demos/datasets/: peak_discharge_trends.csv
demos/hydroshare/: USGS_NLDI_Examples.ipynb  USGS_NWIS_WaterUse_Examples.ipynb  USGS_WaterData_DailyValues_Examples.ipynb  USGS_WaterData_Peaks_Examples.ipynb  (+22 more)
docs/: Makefile
examples/: USGS_NGWMN_Examples.html  USGS_NGWMN_Examples.ipynb  USGS_NWIS_WaterUse_Examples.html  USGS_NWIS_WaterUse_Examples.ipynb  USGS_WaterData_ContinuousData_Examples.html  USGS_WaterData_ContinuousData_Examples.ipynb  USGS_WaterData_DailyStatistics_Examples.html  USGS_WaterData_DailyStatistics_Examples.ipynb  USGS_WaterData_DailyValues_Examples.html  USGS_WaterData_DailyValues_Examples.ipynb  USGS_WaterData_DiscreteSamples_Examples.html  USGS_WaterData_DiscreteSamples_Examples.ipynb  USGS_WaterData_GroundwaterLevels_Examples.html  USGS_WaterData_GroundwaterLevels_Examples.ipynb  USGS_WaterData_Introduction_Examples.html  USGS_WaterData_Introduction_Examples.ipynb  USGS_WaterData_Measurements_Examples.html  USGS_WaterData_Measurements_Examples.ipynb  USGS_WaterData_ParameterCodes_Examples.html  USGS_WaterData_ParameterCodes_Examples.ipynb  USGS_WaterData_Peaks_Examples.html  USGS_WaterData_Peaks_Examples.ipynb  USGS_WaterData_Ratings_Examples.html  USGS_WaterData_Ratings_Examples.ipynb  USGS_WaterData_ReferenceLists_Examples.html  USGS_WaterData_ReferenceLists_Examples.ipynb  USGS_WaterData_Samples_Examples.html  USGS_WaterData_Samples_Examples.ipynb  USGS_WaterData_SiteInfo_Examples.html  USGS_WaterData_SiteInfo_Examples.ipynb  USGS_WaterData_SiteInventory_Examples.html  USGS_WaterData_SiteInventory_Examples.ipynb  USGS_WaterData_Statistics_Examples.html  USGS_WaterData_Statistics_Examples.ipynb  USGS_WaterData_UnitValues_Examples.html  USGS_WaterData_UnitValues_Examples.ipynb  USGS_dataretrieval_DailyValues_Examples.html  USGS_dataretrieval_DailyValues_Examples.ipynb  USGS_dataretrieval_GroundwaterLevels_Examples.html  USGS_dataretrieval_GroundwaterLevels_Examples.ipynb  (+31 more)
meta/: contributing.html  installing.html  license.html
reference/: exceptions.html  index.html  nadp.html  ngwmn.html  nldi.html  nwis.html  samples.html  streamstats.html  utils.html  waterdata.html  wateruse.html  waterwatch.html  wqp.html
tests/: conftest.py  duckdb_connectors_waterdata_test.py  duckdb_connectors_wqp_test.py  iii.py  nadp_test.py  ngwmn_test.py  nldi_test.py  nwis_test.py  rdb_test.py  samples_test.py  streamstats_test.py  utils_test.py  waterdata_chunking_test.py  waterdata_filters_test.py  waterdata_nearest_test.py  waterdata_progress_test.py  waterdata_queryables_test.py  waterdata_ratings_test.py  waterdata_test.py  waterdata_utils_test.py  waterdata_xarray_test.py  waterservices_test.py  wateruse_test.py  wqp_test.py
userguide/: dataportals.html  errors.html  index.html  timeconventions.html
(+110 files in other folders)
