[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dataretrieval"
description = "Discover and retrieve water data from U.S. federal hydrologic web services."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["USGS", "water data"]
license = "CC0-1.0"
license-files = ["LICENSE.md"]
authors = [
  {name = "Timothy Hodson", email = "thodson@usgs.gov"},
]
maintainers = [
  {name = "Elise Hinman", email = "ehinman@usgs.gov"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx",
    "pandas>=2.0.0,<4.0.0",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["dataretrieval", "dataretrieval.codes"]

[tool.setuptools.package-data]
dataretrieval = ["py.typed"]

[project.optional-dependencies]
# Minimal set the CI ``type-check`` job installs — just mypy + the package,
# not the whole test stack.
type-check = [
  "mypy<2",  # <2 so it can still target Python 3.9 (the project's floor)
]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]",
  "pytest-rerunfailures",
  "coverage",
  "pytest-httpx",
  "ruff",
  "dataretrieval[type-check]",  # mypy, pinned once in the type-check extra
]
doc = [
  "docutils<0.22",
  "sphinx",
  "sphinx-rtd-theme",
  "nbsphinx",
  "nbsphinx_link",
  "ipython",
  "ipykernel",
  "matplotlib",
  "folium>=0.12",
  # WaterData_demo.ipynb uses ``.set_crs().explore()`` on geometry-bearing
  # frames; without geopandas the call raises ``AttributeError`` on plain
  # pandas DataFrames. ``mapclassify`` is required by ``geopandas.explore()``
  # (alongside ``folium`` + ``matplotlib`` above). Mirrors the same lower
  # bound as the [nldi] extra.
  "geopandas>=0.10",
  "mapclassify",
]
nldi = [
  'geopandas>=0.10'
]

[project.urls]
homepage = "https://github.com/DOI-USGS/dataretrieval-python"
documentation = "https://doi-usgs.github.io/dataretrieval-python/"
repository = "https://github.com/DOI-USGS/dataretrieval-python.git"

[tool.setuptools_scm]
write_to = "dataretrieval/_version.py"

[tool.ruff]
target-version = "py39"
extend-exclude = ["demos"]

[tool.ruff.lint]
preview = true
# Select rules: Pyflakes(F), pycodestyle(E,W), isort(I), pyupgrade(UP),
# flake8-bugbear(B), flake8-quotes(Q), flake8-simplify(SIM), flake8-tidy-imports(TID)
select = [
    "F", "E", "W", "I", "UP", "B", "Q", "SIM", "TID",
    "C90", # mccabe
    "E501", # line-length
]
ignore = [
    "SIM105", # Use `contextlib.suppress(...)` instead of `try-except-pass`
    "SIM117", # Use a single `with` statement with multiple contexts
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM108"]
"**/__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 72

[tool.mypy]
# The package is fully annotated and passes ``mypy --strict``. The one
# remaining relaxation is ``ignore_missing_imports``: untyped third-party
# libraries (pandas, geopandas) are treated as ``Any`` instead of
# requiring stub packages. Dropping that — via pandas-stubs/types-requests and
# per-module overrides — can follow.
python_version = "3.9"  # the project's minimum supported version
files = ["dataretrieval"]
strict = true
ignore_missing_imports = true

# anyio ships ``py.typed``, so mypy follows into its source — which uses
# ``match`` statements (3.10+). Under our ``python_version = "3.9"`` target that
# is a hard parse error, so don't follow anyio's source; treat it as ``Any``.
[[tool.mypy.overrides]]
module = ["anyio", "anyio.*"]
follow_imports = "skip"
